# conductor-middleware

./: README.md  allowlist.json  allowlist.toml  pyproject.toml
logs/: adjudication-reviewer_rejected_returns_retry.json  adjudication-schema_invalid_artifact_fails.json  adjudication-tampered_evidence_hash_detected.json  adjudication-valid_artifact_passes.json  authorization-authorized_wallet_passes.json  authorization-malformed_wallet_rejected.json  authorization-suspended_wallet_blocked.json  authorization-unauthorized_wallet_blocked.json  mcp-check_authorization.json  mcp-dry_run_payout.json  mcp-run_pipeline_authorized.json  mcp-run_pipeline_schema_failure.json  mcp-run_pipeline_unauthorized.json  payout-authorized_pass_triggers_payout.json  payout-dry_run_returns_blob.json  payout-duplicate_verdict_hash_rejected.json  payout-failed_adjudication_blocks_payout.json  payout-unauthorized_wallet_blocked.json  permanent_failure_stop.json  pipeline-adjudication_retry.json  pipeline-dry_run_mode.json  pipeline-duplicate_verdict_hash.json  pipeline-full_success.json  pipeline-schema_validation_failure.json  pipeline-unauthorized_wallet_block.json  reviewer_rejection_redispatch.json  success_path.json  transient_retry_recovery.json
src/conductor_middleware/: __init__.py  adjudication.py  authorization.py  mcp_server.py  models.py  oracle.py  payout.py  pipeline.py  retry_engine.py
tests/: test_adjudication.py  test_authorization.py  test_mcp_server.py  test_middleware.py  test_payout.py  test_pipeline.py
