[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "conductor-middleware"
version = "0.4.0"
description = "Schema-validated retry and reviewer-gating middleware for Task Node conductor/agent workflows"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "xrpl-py>=2.0",
]
keywords = [
    "conductor",
    "agent",
    "retry",
    "middleware",
    "pydantic",
    "orchestration",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]

[tool.hatch.build.targets.wheel]
packages = ["src/conductor_middleware"]

[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli = true
log_cli_level = "INFO"

[tool.coverage.run]
source = ["src/conductor_middleware"]
